Metaball disappears when deleting first metaball object #52324

Closed
opened 2017-08-09 19:58:27 +02:00 by Ola Sikström · 13 comments

System Information
Operating system and graphics card

Problem seems to be independent of graphics card and OS.
Have tried on OS X (intel) and different combinations of windows/linux and intel/nvidia cards.

Blender Version
Broken: 2.79 rc1 (and at least a couple of releases back)
Worked: not sure which release, but it did work before

Exact steps for others to reproduce the error

Bug is easy to reproduce, so no blend-file is attached.
There are in fact two problems described here, but I assume they are closely related.

Problem 1:

  • create two separate metaball objects
  • delete first object
  • all generated metaball meshes disappears from view,
  • problem persists after metaball object is moved, and also after save/reload

Problem 2:

  • create two separate metaball objects
  • delete second object
  • both metaball meshes are still shown
  • problem disappears when a metaball object is moved / refreshed
**System Information** Operating system and graphics card Problem seems to be independent of graphics card and OS. Have tried on OS X (intel) and different combinations of windows/linux and intel/nvidia cards. **Blender Version** Broken: 2.79 rc1 (and at least a couple of releases back) Worked: not sure which release, but it did work before **Exact steps for others to reproduce the error** Bug is easy to reproduce, so no blend-file is attached. There are in fact two problems described here, but I assume they are closely related. Problem 1: - create two separate metaball objects - delete first object - all generated metaball meshes disappears from view, - problem persists after metaball object is moved, and also after save/reload Problem 2: - create two separate metaball objects - delete second object - both metaball meshes are still shown - problem disappears when a metaball object is moved / refreshed
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @OlaSikstrom

Added subscriber: @OlaSikstrom

Added subscriber: @ShyGuyMath

Added subscriber: @ShyGuyMath
cris self-assigned this 2017-08-09 23:35:13 +02:00

It disappears on me as well, I will take a look!

It disappears on me as well, I will take a look!

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
This is working as intended, see: https://docs.blender.org/manual/en/dev/modeling/metas/editing.html#object-families

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey
cris was unassigned by Sergey Sharybin 2017-08-10 11:24:52 +02:00
Bastien Montagne was assigned by Sergey Sharybin 2017-08-10 11:24:52 +02:00

There is so called "motherball", which contains actual tessellation of all related metaballs. It is calculated as simple as dropping possible ".001" and such suffixes. For example, motherball for "MyMeta.001" will be "MyMeta", and "MyMeta" will contain tessellation for all "MyMeta.001", "MyMeta.002" and so on. If you remove motherball you'll have nowhere to store tessellation. Not saying it's intuitive, but it's how things works.

Missing update was introduced by 897e97f.

@mont29, we "just" need to have DEG_id_tag_update somewhere, at lest that's my guess :)

There is so called "motherball", which contains actual tessellation of all related metaballs. It is calculated as simple as dropping possible ".001" and such suffixes. For example, motherball for "MyMeta.001" will be "MyMeta", and "MyMeta" will contain tessellation for all "MyMeta.001", "MyMeta.002" and so on. If you remove motherball you'll have nowhere to store tessellation. Not saying it's intuitive, but it's how things works. Missing update was introduced by 897e97f. @mont29, we "just" need to have DEG_id_tag_update somewhere, at lest that's my guess :)

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

@ideasman42, re-opening. The second issue is a real bug.

@ideasman42, re-opening. The second issue is a real bug.

This issue was referenced by 5b6ead05bd

This issue was referenced by 5b6ead05bd2eb08b99e3440fd10b125bafe880ec

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52324
No description provided.